--- a/css/mo_popup.css
+++ b/css/mo_popup.css
@@ -29,6 +29,7 @@ body {
   position: fixed;
   background-color: rgba(255, 255, 255);
   z-index: 999;
+  text-align: center;
 }
 @media (max-width:767px) {
   #wrap div.popups {
@@ -36,18 +37,27 @@ body {
   }
 }
 #wrap div.popups div.loader {
-  width: 100px;
-  height: 100px;
-  position: relative;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  margin: -75px 0 0 -75px;
+  width: 100%;
+  height: 100%;
+  max-width: 100px;
+  max-height: 100px;
+  display: inline-block;
   border: 16px solid #f3f3f3;
   border-radius: 50%;
   border-top: 16px solid #3498db;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
+  margin-top: 40vh;
+}
+@media (max-width:767px) {
+  #wrap div.popups div.loader {
+    margin-top: 30vh;
+  }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+  #wrap div.popups div.loader {
+    margin-top: 20vh;
+  }
 }
 @-webkit-keyframes spin {
   0% {
@@ -76,7 +86,7 @@ body {
   padding: 20px;
   box-sizing: border-box;
   text-align: center;
-  overflow-y: scroll;
+  overflow-y: hidden;
   padding-bottom: 50px;
   padding-top: 50px;
 }
@@ -91,6 +101,7 @@ body {
     top: 0%;
     transform: translate(0%, 0%);
     overflow-x: hidden;
+    overflow-y: scroll;
   }
 }
 #wrap div.popups div.speed_compare_popup span.xbox {
@@ -216,13 +227,13 @@ body {
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.ins_tab {
   cursor: pointer;
-  width: 30%;
+  width: 32.5%;
   height: 50%;
   background: white;
   border: 1px solid #f0f0f0;
   display: inline-block;
   margin-bottom: 10px;
-  margin-right: 20px;
+  margin-right: 5px;
   border-radius: 5px;
   padding-top: 25px;
   box-sizing: border-box;
@@ -831,7 +842,7 @@ body {
     text-align: left;
     margin: 0;
     font-size: 0.75rem;
-    word-break: keep-all;
+    word-break: normal;
   }
   #wrap div.popups div.speed_compare_popup div.ins_tabs div.mo_compare_bord div.mo_table .mo_tab .top_data p {
     font-size: 0.65rem;
@@ -949,17 +960,27 @@ body {
     font-size: 0.875rem;
     text-align: center;
   }
+  #wrap div.popups div.speed_compare_popup div.ins_tabs div.mo_compare_bord div.mo_table .mo_tab div.term_tab p {
+    font-size: 0.75rem;
+  }
   #wrap div.popups div.speed_compare_popup div.ins_tabs div.mo_compare_bord div.mo_table .mo_tab div.payterm_tab {
     border-bottom: 1px solid #d0d0d0;
     height: 50px;
     line-height: 50px;
     font-size: 0.875rem;
     text-align: center;
+    overflow: hidden;
+  }
+  #wrap div.popups div.speed_compare_popup div.ins_tabs div.mo_compare_bord div.mo_table .mo_tab div.payterm_tab p {
+    font-size: 0.75rem;
   }
   #wrap div.popups div.speed_compare_popup div.ins_tabs div.mo_compare_bord div.mo_table .mo_tab div.extension_tab {
     line-height: 50px;
     font-size: 0.875rem;
     text-align: center;
+  }
+  #wrap div.popups div.speed_compare_popup div.ins_tabs div.mo_compare_bord div.mo_table .mo_tab div.extension_tab p {
+    font-size: 0.75rem;
   }
   #wrap div.popups div.speed_compare_popup div.ins_tabs div.mo_compare_bord div.mo_table .left_tab {
     width: 75%;
@@ -1503,9 +1524,16 @@ body {
     font-size: 1rem;
   }
   #wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.price_info h2.price span {
-    font-size: 1rem;
+    font-size: 1.75rem;
     color: #ec6647;
-    margin-right: 5px   ;
+  }
+  #wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.price_info h2.price span b {
+    font-size: 0.75rem;
+    margin-right: 5px;
+    display: block;
+    width: 100%;
+    float: right;
+    margin-top: 20px;
   }
   #wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.ins_info_tab {
     width: 100%;
@@ -1671,11 +1699,19 @@ body {
   padding-top: 40px;
   box-sizing: border-box;
 }
+#wrap div.insert_popup div.insert_box p,
+#wrap div.insert_popup div.insert_box label {
+  text-align: left;
+}
 @media (max-width:767px) {
   #wrap div.insert_popup div.insert_box {
     max-width: 100%;
     height: 100%;
     top: 50%;
+  }
+  #wrap div.insert_popup div.insert_box p,
+  #wrap div.insert_popup div.insert_box label {
+    text-align: left;
   }
 }
 #wrap div.insert_popup div.insert_box span.xbox {
@@ -1850,8 +1886,13 @@ body {
 #wrap div.insert_popup div.insert_box div.insert_form div.middle_tab span.date_btn {
   position: absolute;
   right: 53%;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 60%;
+  transform: translateY(0%);
+}
+@media (max-width:767px) {
+  #wrap div.insert_popup div.insert_box div.insert_form div.middle_tab span.date_btn {
+    top: 30%;
+  }
 }
 #wrap div.insert_popup div.insert_box div.insert_form div.middle_tab .colum-2 {
   position: relative;
