--- a/less/mo_style_main.less
+++ b/less/mo_style_main.less
@@ -1,6 +1,8 @@
 @mainColor: #ec6647;
 @mediaVericalMobile: ~"(max-width:767px)"; //basic setting
 @mediaTablet: ~"(min-width: 768px) and (max-width: 1024px)"; //tablet   
+@mediaHorizontalMobile: ~"(min-width: 576px) and (max-width: 767px)"; //HorizontalMobile
+
 
 
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
@@ -23,7 +25,11 @@ body {
     height: 100%;
     margin: 0 auto;
     @media@mediaVericalMobile {
-        max-width: 340px;
+        max-width: 97.5%;
+
+    }
+    @media@mediaHorizontalMobile{
+        max-width: 412px;
 
     }
 
@@ -196,6 +202,7 @@ body {
                     margin-left: 15px;
                     float: left;
                     text-align: center;
+                    margin-top: 8px;
                     .btns {
                         width: 35%;
                         display: inline-block;
@@ -227,6 +234,10 @@ body {
                         div.left_btn{
                             display: none;
                         }
+                        div.right_btn{
+                            margin-top: 8px;
+                        }
+
                     }
 
                 }
@@ -251,7 +262,6 @@ body {
 
                 .tabs {
                     height: 100%;
-                    float: left;
                 }
 
                 .left_tab {
@@ -277,6 +287,8 @@ body {
                         color: #444444;
                         word-break: keep-all;
                         @media@mediaVericalMobile {
+                            display: block;
+
                             font-size: 1rem;
                             span{
                                 display: block;
@@ -295,8 +307,7 @@ body {
                     .ani_section {
                         width: 730px;
                         @media@mediaVericalMobile {
-                            max-width: 340px;
-
+                            width: 100%;
                         }
 
 
@@ -307,6 +318,7 @@ body {
                         box-sizing: border-box;
                         @media@mediaVericalMobile {
                             padding-top: 50px;
+                            margin: 0 auto;
 
                         }
 
@@ -619,10 +631,12 @@ body {
 
 
                     .tabs {
-                        width: 40%;
+                        width: 100%;
                         height: 300px;
                         background: white;
                         padding: 30px;
+                        padding-left: 50px;
+                        padding-right: 50px;
                         box-sizing: border-box;
                         margin: 30px auto;
                         @media@mediaVericalMobile {
@@ -649,9 +663,9 @@ body {
                             font-size: 0.875rem;
                             color: #777777;
                             line-height: 1.2rem;
+                            text-align: left;
                             @media@mediaVericalMobile {
                                 width: 80%;
-                                text-align: left;
                                 word-break: keep-all;
                             }
 
@@ -717,6 +731,7 @@ body {
                                             font-size: 0.875rem;
                                             color: #222222;
                                             opacity: 0.0;
+                                            text-align: center;
                                             @media@mediaVericalMobile {
                                                 font-size: 0.663rem;
 
@@ -938,10 +953,12 @@ body {
                     height: 300px;
                  
                     .tabs {
-                        width: 90%;
+                        width: 100%;
                         height: 100%;
                         background: white;
                         padding: 30px;
+                        padding-left: 50px;
+                        padding-right: 50px;
                         box-sizing: border-box;
                         margin: 20px auto;
                         @media@mediaVericalMobile {
@@ -1193,7 +1210,7 @@ body {
                                 position: absolute;
                                 z-index: 100;
                                 top: 10px;
-                                right: 15px;
+                                right: 100px;
                                 background-image: url(../img/ani_img/page4-section1-line.png);
                                 .backgroundOption;
                                 background-size: cover;
@@ -1204,7 +1221,7 @@ body {
                             p.line_text {
                                 position: absolute;
                                 ;
-                                right: 15px;
+                                right: 100px;
                                 transform: translateY(-18px);
                                 opacity: 0.0;
                             }
@@ -1437,6 +1454,7 @@ body {
                             border-right: 1px solid #d0d0d0;
                             box-sizing: border-box;
                             overflow: hidden;
+                            position: relative;
 
                             div.center_line {
                                 width: 1px;
@@ -1447,6 +1465,7 @@ body {
                                 left: 35%;
                                 z-index: 15;
                                 @media@mediaVericalMobile {
+
                                 }
 
                             }
@@ -1519,7 +1538,7 @@ body {
                                     color: white;
                                     font-weight: bold;
                                     font-size: 0.875rem;
-                                    margin-left: 65px;
+                                    margin-left: 0px;
                                     @media@mediaVericalMobile {
                                         width: 70px;
                                         height: 25px;
@@ -1531,17 +1550,39 @@ body {
                                     }
 
                                 }
+                                span.text-ani-1 {
+                                    position: absolute;
+                                    left: 17.5%;
+                                    transform: translateX(-50%);
+                                    @media@mediaVericalMobile {
+                                        left: 10%;
+                                    }
+
+                                }
+
 
                                 span.text-ani-2 {
+                                    position: absolute;
                                     background: #4ab120;
-                                    margin-left: 70px;
+                                    margin-left: 0px;
                                     margin-right: 10px;
                                     z-index: 20;
-                                    ;
+                                    left: 38%;
+                                    @media@mediaVericalMobile {
+                                        left: 57.5%;
+
+                                    }
                                 }
                                 span.text-ani-3 {
+                                    position: absolute;
+                                    left: 52%;
+
                                     @media@mediaVericalMobile {
-                                        margin-right: 20px;
+                                        bottom: -5px;
+                                        left: 0;
+                                        width: 100%;
+                                        padding-right:3.5%;
+
                                     }
 
                                 }
@@ -2115,7 +2156,7 @@ body {
                 background: white;
                 transform: translateY(-50%);
                 @media@mediaVericalMobile {
-                    max-width: 340px;
+                    max-width: 97.5%;
 
                 }
 
@@ -2153,6 +2194,7 @@ body {
             @media@mediaVericalMobile {
                 padding:0px;
                 margin-bottom: 50px;
+                border-bottom: 1px solid #d0d0d0;
             }
 
             div.wrap{
@@ -2160,6 +2202,11 @@ body {
                 padding-top: 50px;
                 box-sizing: border-box;;
                 text-align: center;;
+                @media@mediaVericalMobile {
+                    max-width: 97.5%;
+
+                }
+
                 h2{
                     font-size: 2.5rem;;
                     font-weight: bold;
@@ -2192,7 +2239,9 @@ body {
                     margin-bottom: 20px;
                     margin-top: 20px;;
                     text-align: center;;
-                   
+                    @media@mediaHorizontalMobile{
+                        height: 340px;
+                    }
 
                     div.fn_box{
                         cursor: pointer;
@@ -2211,13 +2260,16 @@ body {
                         vertical-align: middle;
                         position: relative;
                         @media@mediaVericalMobile {
-                            width: 160px;
+                            width: 48%;
                             height: 160px;
                             margin: 0px;
-                            margin-right: 3px;
-                            margin-left: 3px;
+                            margin-right: 2px;
+                            margin-left: 2px;
                             padding-top: 10px;
                             margin-bottom: 6px;
+                        }
+                        @media@mediaHorizontalMobile{
+                            width:30%;
                         }
                         
                         img.bedge{
@@ -2238,7 +2290,7 @@ body {
                             background-size: contain;;
                             margin: 0 auto;;
                             @media@mediaVericalMobile {
-                                width: 80px;
+                                width: 90px;
                                 height: 40px;
                             }
 
@@ -2247,19 +2299,19 @@ body {
                             font-size: 1rem;
                             color: #444;
                             margin-bottom: 5px;
-                            width: 80%;
+                            width: 60%;
                             margin: 0 auto;
+                            word-break: keep-all;
                             @media@mediaVericalMobile {
                                 font-size: 0.75rem;
                                 margin-top: 15px;
-                                word-break: keep-all;
                             }
 
                             span{
                                 display: block;;
                                 margin-top: 5px;
                                 @media@mediaVericalMobile {
-                                        display: none;
+                                    display: none;
                                 }
                             }
                         }
@@ -2270,11 +2322,11 @@ body {
                             margin: 0px auto;;
                             text-align: center;
                             line-height: 38px;;
-                            border:2px solid #d0d0d0;
+                            border:1px solid #d0d0d0;
                             box-sizing: border-box;;
                             color: #444;
                             position: absolute;
-                            bottom: 5px;
+                            bottom: 30px;
                             left: 50%;
                             transform: translateX(-50%);
                             @media@mediaVericalMobile {
@@ -2282,6 +2334,7 @@ body {
                                 height: 35px;
                                 line-height: 35px;
                                 font-size: 0.75rem;
+                                bottom: 10px;
                             }
 
                         }
@@ -2307,7 +2360,7 @@ body {
                     height: 50px;
                     background: @mainColor;
                     margin: 0 auto;;
-                    margin-top: 50px;
+                    margin-top: 30px;
                     color: white;
                     border-radius: 100px;
                     line-height: 50px;
@@ -2353,12 +2406,15 @@ body {
                 background-size: 250%;
                 background-position-x: 20%;
 
-
             }
 
-         
+            @media@mediaHorizontalMobile{
+                background-size: 170%;
+                background-position-x: 5%;
 
 
+
+            }
         }
 
     }
