--- a/less/mo_common.less
+++ b/less/mo_common.less
@@ -154,7 +154,7 @@ a{
 @mainColor:#ec6647;
 
 @mediaVericalMobile: ~"(max-width:767px)"; //basic setting
-// @mediaHorizontalMobile: ~"(min-width: 576px) and (max-width: 767px)"; //HorizontalMobile
+@mediaHorizontalMobile: ~"(min-width: 576px) and (max-width: 767px)"; //HorizontalMobile
 @mediaTablet: ~"(min-width: 768px) and (max-width: 1024px)"; //tablet   
 html,body{
     font-size: 16px;
@@ -169,9 +169,8 @@ html,body{
     height: 100%;
     margin: 0 auto;
     @media@mediaVericalMobile{
-        max-width: 350px;
+        max-width: 95%;
         margin: 0 auto;
-
     }
 }
 .backgroundOption {
@@ -289,7 +288,7 @@ div#wrap{
      
 
                     img{
-                        width: 140px;
+                        width: 130px;
                         vertical-align: middle;
                     }
                 }
@@ -347,12 +346,11 @@ div#wrap{
             div.wrap{
                 line-height: 50px;
                 .wraps;
-                max-width: 768px;
+                max-width: 100%;
                 margin: 0 auto;
                 nav{
                     ul{
                         width: 100%;
-                        max-width: 740px;
                         margin: 0 auto;
 
                         li{
@@ -386,6 +384,15 @@ div#wrap{
                                 border-right: 1px solid lightgray;
 
                             }
+                        }
+                        li:nth-child(1){
+                            border-left: 0px;
+                        }
+                        li:nth-last-child(1){
+                            border-right: 0px;
+                            margin: 0;
+
+
                         }
                         li.active{
                             a{
@@ -427,7 +434,13 @@ div#wrap{
         ul.mo_navs{
             width: 100%;
             height: 50vh;
-            margin-bottom: 30px;
+            margin-bottom: 5vh;
+
+            @media@mediaHorizontalMobile{
+                height: 60vh;
+                margin-bottom: 3vh;
+            
+            }
 
             li{
                 cursor: pointer;
@@ -442,8 +455,11 @@ div#wrap{
                     position: absolute;
                     top: 50%;
                     transform:translateY(-50%);
+                    font-size: 0.875rem;
+                    vertical-align: middle;
+
                     img{
-                        vertical-align: text-top;
+                        vertical-align: text-bottom;
                         margin-right: 15px;
                     }
                     img.arrow{
@@ -470,7 +486,7 @@ div#wrap{
         }
         ul.sns_bar{
             text-align: center;
-            margin-top: 20px;
+            margin-top: 0vh;
             li{
                 display: inline-block;
                 margin: 3px;
@@ -493,7 +509,7 @@ div#wrap{
         display: block;
         height: 60px;
         position: fixed;
-        z-index: 99;
+        z-index: 900;
      
         div.wrap{
             .wraps;
@@ -512,12 +528,12 @@ div#wrap{
             }
             ul.mo_nav{
                 cursor: pointer;
-                width: 5%;
                 height: 100%;
                 float: right;
                 padding-top: 20px;
                 box-sizing: border-box;
                 margin-right: 10px;
+                max-width: 20px;
                 li{
                     float: right;
                     width: 20px;
@@ -540,6 +556,9 @@ div#wrap{
 
     footer{
         background: white;;
+    
+
+
         div.company_list{
             width: 100%;
             height: 90px;
@@ -575,10 +594,11 @@ div#wrap{
     
         }
         div.wrap{
-            max-width: 740px;
             overflow: hidden;
             line-height: 50px;
             .wraps;
+            max-width: 100%;
+
             nav{
                 @media@mediaVericalMobile{
                     display: none;
@@ -587,10 +607,9 @@ div#wrap{
 
                 ul{
                     width: 100%;
-                    max-width: 740px;
                     li{
                         // width: 200px;
-                        width: calc(99.5%/6);
+                        width: calc(100%/6);
                         height: 100%;
                         float: left;
                         text-align: center;
@@ -620,6 +639,14 @@ div#wrap{
 
                         }
                     }
+                    li:nth-child(1){
+                        border-left: 0px;
+                    }
+                    li:nth-last-child(1){
+                        border-right: 0px;
+
+                    }
+
                     li.active{
                         a{
                             font-weight: bold;  
@@ -644,10 +671,10 @@ div#wrap{
             }
         }
         div.company_info{
-            height: 210px;
+            height: 170px;
             border-top: 1px solid lightgray;
             @media@mediaVericalMobile{
-                height: 330px;
+                height: 250px;
             }
 
             div.wrap{
@@ -663,7 +690,7 @@ div#wrap{
                 }
                 div.info_box{
                     width: 100%;
-                    height: 100%;
+                    height: 50%;
                     float: left;
                     color: #777777;
                     
