--- a/less/style_main.less
+++ b/less/style_main.less
@@ -185,7 +185,6 @@ body {
                         font-size: 1.125rem;
                         margin-bottom: 5px;
                         color: #444444;
-                        ;
                     }
                 }
 
@@ -1615,19 +1614,17 @@ body {
                     letter-spacing: -2px;;
                 }
                 div.fn_boxs{
-                    width: 100%;
+                    width: 80%;
                     height: 520px;
                     margin: 0px auto;;;
                     margin-bottom: 20px;
                     margin-top: 20px;;
-                    text-align: left;;
                     div.fn_box{
                         cursor: pointer;
                         width: 285px;
                         height: 250px;
                         border:1px solid #d9d9d9;
                         box-sizing: border-box;;
-                        float: left;
                         // margin-right: 15px;
                         margin-bottom: 10px;;
                         border-radius: 5px;
@@ -1636,6 +1633,8 @@ body {
                         margin-right: 5px;
                         margin-left: 5px;
                         position: relative;
+                        display: inline-block;
+                        vertical-align: middle;
                         
                         img.bedge{
                             width: 35px;
@@ -2512,6 +2511,7 @@ body {
                 margin-bottom: 15px;
             }
         }
+
     }
     section.zoom_render_nav{
         div.wrap{
@@ -2541,6 +2541,9 @@ body {
         width: 100%;
         min-height: 800px;
         background: white;
+        padding-top: 50px;
+        padding-bottom: 50px;
+
         div.wrap{
             width: 100%;
             max-width: 1200px;
@@ -2724,6 +2727,125 @@ body {
                 font-size: 0.875rem;
                 margin-top: 10px;
             }
+        }
+
+        h2.inputs_tit{
+            margin-top: 50px;
+            font-size: 3.125rem;
+            font-weight: bold;
+            color: #222;
+            text-align: center;
+            letter-spacing: -1px;
+        }
+        div.input_tb{
+            .wraps;
+            height: 600px;
+            margin-top: 60px;
+            margin-bottom: 60px;
+            border-top: 2px solid #222;
+            border-bottom: 2px solid #222;
+            div.row{
+                width: 100%;
+                height: 60px;
+                border-bottom: 1px solid #d0d0d0;
+                input{
+                    width: 100%;
+                    height: 40px;
+                    border: 1px solid #d0d0d0;
+                    outline: none;
+                    padding-left: 10px;
+                    box-sizing: border-box;;
+
+                }
+                div.row_tit{
+                    width: 260px;
+                    height: 100%;
+                    float: left;
+                    box-sizing: border-box;
+                    padding-top: 20px;
+                    color: #222;
+                    padding-left: 40px;
+                }
+                div.row_desc{
+                    width: 800px;
+                    height: 100%;
+                    float: left;
+                    padding-top: 10px;
+                    box-sizing: border-box;
+                }
+            }
+            div.row-3{
+                select{
+                    width: 130px;
+                    height: 40px;
+                    background-image: url(../img/popup/select_bg.png);
+                    .backgroundOption;
+                    background-size: 15px;
+                    background-position-x: 95%;
+                    border: 1px solid #d0d0d0;
+
+                }
+                input{
+                    height: 40px;
+                    width: 300px;
+                }
+            }
+            div.row-4{
+                height: 180px;
+                textarea{
+                    height: 160px;
+                    width: 100%;
+                    resize: none;
+                    outline: none;
+                    border: 1px solid #d0d0d0;
+                }
+            }
+            div.row-5{
+                height: 240px;
+                border: 0px;
+                padding-top: 25px;
+                label.container{
+                    padding-top: 3px;
+                    font-size: 0.875rem;
+                    span.checkmark{
+                        width: 20px;
+                        height: 20px;
+                        
+                    }
+                }
+                .container .checkmark:after{
+                    top: 2px;
+                    left: 5px;
+                }
+                div.agree_desc{
+                    width: 100%;
+                    height: 160px;
+                    border: 1px solid #d0d0d0;
+                    box-sizing: border-box;;
+                    padding: 15px;
+                    font-size: 0.875rem;
+                    overflow-y: scroll;
+                    p{
+                        margin-bottom: 5px;;
+                    }
+                    p.margin_point{
+                        margin-bottom: 20px;
+                    }
+                }
+            }
+        }
+        div.insert_btn{
+            cursor: pointer;
+            width: 250px;
+            height: 50px;
+            background: @mainColor;
+            margin: 0 auto;;
+            border-radius: 50px;
+            font-size: 1.125rem;
+            color: white;
+            font-weight: bold;
+            text-align: center;
+            line-height: 50px;
         }
 
         div.product_desc{
