--- a/bm_main_re/css/default.css
+++ b/bm_main_re/css/default.css
@@ -205,3 +205,42 @@ section.main div.text_area div.btn{background-color: #ec6647; margin-left: 110px
     box-shadow: 3px 0px 5px 0px rgba(0, 0, 0, 0.38);}
 
 section.main.con3{background-image: url(../image/section-banner-gradiation_bg.png); background-size: auto; background-position:bottom; background-repeat: no-repeat;}
+
+
+section.main.con5{ background-size: cover; height: 630px; background-image: url(../image/main-secion5-bg.png);}
+section.main.con5 div.wrap{padding: 100px 0px;  text-align: center;}
+section.main.con5 h4{font-weight: bold; text-align: center; margin-bottom: 30px;}
+section.main.con5 p{font-size: 21px; text-align: center; margin-bottom: 5px; font-weight: bold; position: relative; width: auto; display: inline-block;}
+section.main.con5 p span{font-size: 21px; color: #ee3324;font-weight: bold;}
+section.main.con5 img{width: auto;}
+section.main.con5 img.obj{position: absolute; opacity: 0.3;}
+section.main.con5 img.obj.left{left: -50px; top: -10px;}
+section.main.con5 img.obj.right{right: -50px; top: 10px;}
+section.main.con5 div.forms{max-width: 710px; margin: 30px auto; text-align: left;}
+section.main.con5 div.forms ul li{
+    display: inline-block;
+    width: 48%;
+    max-width: 350px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    /* margin: 5px; */
+}
+section.main.con5 div.forms ul li input,
+section.main.con5 div.forms ul li select
+{width: 100%; height: 60px; border: 1px solid #d0d0d0; color: #666;}
+section.main.con5 div.forms ul li input::placeholder{
+    color: #666;
+}
+
+section.main.con5 div.forms ul li input:focus,
+section.main.con5 div.forms ul li select:focus{
+    border: 2px solid #ec6647;
+}
+section.main.con5 div.checkbox{max-width: 710px;margin: 0 auto;}
+section.main.con5 div.checkbox label{text-align: left;}
+
+section.main.con6 div.wrap{padding: 100px 0px;}
+section.main.con6 h4{text-align: center; font-weight: bold;}
+section.main.con6 h4 span{font-size: 40px; font-weight: bold; color: #ee3324;}
+section.main.con6 p{text-align: center; margin-top: 20px;}
+
